Added translation to Tabs
Implemented the change to SpaceSettings as an example.

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -30,5 +30,12 @@
         "uncategorize_subspaces": "Uncategorize subspaces",
         "pin_sidebar": "Pin to sidebar",
         "unpin_sidebar": "Unpin from sidebar"
+    },
+    "settings":{
+        "tabs": {
+            "general": "General",
+            "members": "Members",
+            "permission": "Permissions"
+        }
     }
 }
