Implemented translation to all organisms

--- a/public/locales/jp/translation.json
+++ b/public/locales/jp/translation.json
@@ -3,7 +3,8 @@
         "close": "閉める",
         "leave": "残す"
     },
-    "welcome":{
-        "heading": "いらっしゃいませ"
+    "Welcome": {
+        "heading": "おはようございます",
+        "subheading": "Yet another Matrix client"
     }
 }
