--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -3,6 +3,48 @@
     "options": "Options"
   },
   "Organisms": {
+    "Welcome": {
+      "heading": "Welcome to Cinny!",
+      "subheading": "Yet another Matrix client"
+    },
+    "SpaceSettings": {
+      "categorize_subspaces": "Categorize subspaces",
+      "uncategorize_subspaces": "Uncategorize subspaces",
+      "pin_sidebar": "Pin to sidebar",
+      "unpin_sidebar": "Unpin from sidebar"
+    },
+    "Settings": {
+      "theme": {
+        "follow_system": {
+          "title": "Follow system theme",
+          "description": "Use light or dark mode based on the system settings."
+        },
+        "title": "Theme",
+        "theme_light": "Light",
+        "theme_silver": "Silver",
+        "theme_dark": "Dark",
+        "theme_butter": "Butter"
+      },
+      "markdown": {
+        "title": "Markdown formatting",
+        "description": "Format messages with markdown before sending"
+      },
+      "hide_membership_events": {
+        "title": "Hide membership events",
+        "description": "Hide membership change messages from room timeline. (Join, Leave, Invite, Kick and Ban)"
+      },
+      "hide_nickname_avatar_events": {
+        "title": "Hide nick/avatar events",
+        "description": "Hide nickname and avatar change messages from the room timeline."
+      },
+      "tabs": {
+        "appearance": "Appearance",
+        "notifications": "Notifications",
+        "emoji": "Emoji",
+        "security": "Security",
+        "about": "About"
+      }
+    },
     "RoomCommon": {
       "changed_room_name": " changed room name"
     },
@@ -36,6 +78,27 @@
   "Molecules": {
     "ConfirmDialog": {
       "cancel": "Cancel"
+    },
+    "RoomOptions": {
+      "title": "Options for {{room_name}}",
+      "leave": {
+        "title": "Leave room",
+        "subtitle": "Are you sure you want to leave the {{room_name}} room?",
+        "button_text": "Leave"
+      },
+      "mark_as_read": "Mark as read",
+      "notifications_heading": "Notifications",
+      "invite": "Invite"
+    },
+    "SpaceOptions": {
+      "leave_space": "Leave Space",
+      "leave_space_confirmation": "Are you sure that you want to leave the {{space}} space?",
+      "leave_space_confirm": "Leave",
+      "mark_as_read": "Mark as read",
+      "invite": "Invite",
+      "manage_rooms": "Manage rooms",
+      "settings": "Settings",
+      "leave": "Leave"
     }
   }
 }
